// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field exports the property to JSON 1`] = `
Object {
  "aggregatable": true,
  "conflictDescriptions": Object {
    "a": Array [
      "b",
      "c",
    ],
    "d": Array [
      "e",
    ],
  },
  "count": 1,
  "esTypes": Array [
    "text",
  ],
  "lang": "lang",
  "name": "name",
  "readFromDocValues": false,
  "script": "script",
  "scripted": true,
  "searchable": true,
  "subType": Object {
    "multi": Object {
      "parent": "parent",
    },
    "nested": Object {
      "path": "path",
    },
  },
  "type": "string",
}
`;

exports[`Field spec snapshot 1`] = `
Object {
  "aggregatable": true,
  "conflictDescriptions": Object {
    "a": Array [
      "b",
      "c",
    ],
    "d": Array [
      "e",
    ],
  },
  "count": 1,
  "esTypes": Array [
    "text",
  ],
  "format": Object {
    "id": "number",
    "params": Object {
      "pattern": "$0,0.[00]",
    },
  },
  "lang": "lang",
  "name": "name",
  "readFromDocValues": false,
  "script": "script",
  "scripted": true,
  "searchable": true,
  "subType": Object {
    "multi": Object {
      "parent": "parent",
    },
    "nested": Object {
      "path": "path",
    },
  },
  "type": "string",
}
`;
